Finishing documentation
